# redgettext

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  redgettext.py  setup.cfg  setup.py
.github/workflows/: publish_release.yaml
tests/: call_test.py  comments_test.py  conftest.py  docstring_test.py  keyword_spec_parser_test.py  regression_test.py  utils.py
