[metadata]
name = redgettext
version = attr: redgettext.__version__
url = https://github.com/Tobotimus/redgettext
author = Tobotimus
author_email = tobyharradine@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = GPL-3.0
description = "A slightly modified pygettext for Red-DiscordBot"
long_description = file: README.rst
keywords =
    gettext
    redbot
    red-discordbot


[options]
python_requires = >=3.6
include_package_data = True
py_modules =
    redgettext

[options.entry_points]
console_scripts =
    redgettext=redgettext:main
