[metadata]
name = redgettext
version = attr: redgettext.__version__
url = https://github.com/Tobotimus/redgettext
author = Toby Harradine
author_email = me@tobyharradine.id.au
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license = GPL-3.0
description = "A slightly modified pygettext for Red-DiscordBot"
long_description = file: README.rst
keywords =
    gettext
    redbot
    red-discordbot


[options]
python_requires = >=3.6
install_requires =
    polib
py_modules =
    redgettext

[options.entry_points]
console_scripts =
    redgettext=redgettext:main
